--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@
         }
         function handleBack(){
             var elements = document.getElementsByClassName('mainPart');
-            elements[0].style.display="block";
-            elements[1].style.display="block";
+            for(i=0;i<elements.length;i++){
+                elements[i].style.display="block";
+            }
+            
             document.getElementById('confermation').style.display="none";
         }
 
